# C-Embedded-System-Simulator

./: CMakeLists.txt  README.md
include/: InterruptController.hpp  InterruptEvent.hpp  InterruptRingBuffer.hpp  SensorDriver.hpp  SensorSimulator.hpp
src/: InterruptController.cpp  Main.cpp  SensorDriver.cpp  SensorSimulator.cpp
src/cpp/: CircularBuffer.cpp  CircularBuffer.hpp  IDevice.cpp  Interrupt.cpp  Interrupt.hpp  Sensor.cpp  Sensor.hpp
tests/: cpp_tests.cpp  test_project.py
